examples/xfce-desktop/xfce-desktop-vdi-web-preview-gateway.yaml
# Copyright 2021 The Selkies Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: xfce-desktop-vdi-web-preview-gateway
  namespace: pod-broker-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        ###
        # Change these if you are not using Cloud Endpoints DNS.
        # These hosts must match the BrokerAppConfigs spec.appParams.WebPreviewNNNN values.
        ###
        - "xfce-desktop-port-3000.endpoints.${PROJECT_ID}.cloud.goog"
        - "xfce-desktop-port-8000.endpoints.${PROJECT_ID}.cloud.goog"
        - "xfce-desktop-port-8080.endpoints.${PROJECT_ID}.cloud.goog"
